fix: latest spacing

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -49,6 +49,7 @@ a {
 
   &__network-stats {
     margin-top: -$padding-normal;
+    margin-bottom: $padding-normal;
   }
 }
 
