--- a/components/Latest/Latest.scss
+++ b/components/Latest/Latest.scss
@@ -1,10 +1,5 @@
 .latest {
   padding: $padding-default;
-  margin-top: $padding-normal;
-
-  &:last-child {
-    margin-top: 0;
-  }
 
   &__header {
     display: flex;
